feat(service): expose rest controllers for freelancer profile features