@@ -6,12 +6,14 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 import tn.esprit.freelancerprofileservice.dto.request.AddCertificationRequest;
+import tn.esprit.freelancerprofileservice.dto.request.UpdateCertificationRequest;
 import tn.esprit.freelancerprofileservice.dto.response.CertificationResponse;
 import tn.esprit.freelancerprofileservice.entities.Certification;
 import tn.esprit.freelancerprofileservice.services.ICertificationService;
 
+import io.swagger.v3.oas.annotations.Operation;
+
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Controller REST — gestion des certifications
@@ -23,6 +25,7 @@ public class CertificationController {
 
     private final ICertificationService certificationService;
 
+    @Operation(summary = "Ajouter une certification")
     @PostMapping("/user/{userId}")
     public ResponseEntity<CertificationResponse> addCertification(
             @PathVariable Long userId,
@@ -37,23 +40,45 @@ public class CertificationController {
                 .certificateUrl(request.getCertificateUrl())
                 .build();
 
+        Certification saved = certificationService.addCertification(userId, cert);
+
         return ResponseEntity.status(HttpStatus.CREATED)
-                .body(toResponse(certificationService.addCertification(userId, cert)));
+                .body(toResponse(saved));
     }
 
+    @Operation(summary = "Mettre à jour une certification")
+    @PutMapping("/{certId}/user/{userId}")
+    public ResponseEntity<CertificationResponse> updateCertification(
+            @PathVariable Long certId,
+            @PathVariable Long userId,
+            @Valid @RequestBody UpdateCertificationRequest request) {
+
+        Certification updated = certificationService.updateCertification(certId, userId, request);
+
+        return ResponseEntity.ok(toResponse(updated));
+    }
+
+    @Operation(summary = "Récupérer mes certifications")
     @GetMapping("/user/{userId}")
     public ResponseEntity<List<CertificationResponse>> getMyCertifications(
             @PathVariable Long userId) {
+
         List<CertificationResponse> certs = certificationService.getMyCertifications(userId)
-                .stream().map(this::toResponse).collect(Collectors.toList());
+                .stream()
+                .map(this::toResponse)
+                .toList();
+
         return ResponseEntity.ok(certs);
     }
 
+    @Operation(summary = "Supprimer une certification")
     @DeleteMapping("/{certId}/user/{userId}")
     public ResponseEntity<Void> deleteCertification(
             @PathVariable Long certId,
             @PathVariable Long userId) {
+
         certificationService.deleteCertification(certId, userId);
+
         return ResponseEntity.noContent().build();
     }
 
