@@ -11,7 +11,6 @@ import tn.esprit.freelancerprofileservice.entities.PortfolioItem;
 import tn.esprit.freelancerprofileservice.services.IPortfolioService;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Controller REST — gestion du portfolio
@@ -23,7 +22,6 @@ public class PortfolioController {
 
     private final IPortfolioService portfolioService;
 
-    // POST /api/portfolio/user/{userId}
     @PostMapping("/user/{userId}")
     public ResponseEntity<PortfolioResponse> addItem(
             @PathVariable Long userId,
@@ -36,21 +34,35 @@ public class PortfolioController {
                 .imageUrl(request.getImageUrl())
                 .technologies(request.getTechnologies())
                 .completionDate(request.getCompletionDate())
+                .pinned(Boolean.TRUE.equals(request.getPinned()))
                 .build();
 
+        PortfolioItem savedItem = portfolioService.addPortfolioItem(userId, item);
+
         return ResponseEntity.status(HttpStatus.CREATED)
-                .body(toResponse(portfolioService.addPortfolioItem(userId, item)));
+                .body(toResponse(savedItem));
     }
 
-    // GET /api/portfolio/user/{userId}
     @GetMapping("/user/{userId}")
     public ResponseEntity<List<PortfolioResponse>> getMyPortfolio(@PathVariable Long userId) {
         List<PortfolioResponse> items = portfolioService.getMyPortfolio(userId)
-                .stream().map(this::toResponse).collect(Collectors.toList());
+                .stream()
+                .map(this::toResponse)
+                .toList();
+
         return ResponseEntity.ok(items);
     }
 
-    // PUT /api/portfolio/{itemId}/user/{userId}
+    @GetMapping("/user/{userId}/pinned")
+    public ResponseEntity<List<PortfolioResponse>> getPinnedPortfolio(@PathVariable Long userId) {
+        List<PortfolioResponse> items = portfolioService.getPinnedPortfolio(userId)
+                .stream()
+                .map(this::toResponse)
+                .toList();
+
+        return ResponseEntity.ok(items);
+    }
+
     @PutMapping("/{itemId}/user/{userId}")
     public ResponseEntity<PortfolioResponse> updateItem(
             @PathVariable Long itemId,
@@ -64,30 +76,74 @@ public class PortfolioController {
                 .imageUrl(request.getImageUrl())
                 .technologies(request.getTechnologies())
                 .completionDate(request.getCompletionDate())
+                .pinned(Boolean.TRUE.equals(request.getPinned()))
                 .build();
 
-        return ResponseEntity.ok(toResponse(
-                portfolioService.updatePortfolioItem(itemId, userId, updates)));
+        PortfolioItem updatedItem = portfolioService.updatePortfolioItem(itemId, userId, updates);
+
+        return ResponseEntity.ok(toResponse(updatedItem));
     }
 
-    // DELETE /api/portfolio/{itemId}/user/{userId}
+    @PatchMapping("/{itemId}/user/{userId}/pin")
+    public ResponseEntity<PortfolioResponse> pinItem(
+            @PathVariable Long itemId,
+            @PathVariable Long userId) {
+
+        PortfolioItem pinnedItem = portfolioService.pinPortfolioItem(itemId, userId);
+        return ResponseEntity.ok(toResponse(pinnedItem));
+    }
+
+    @PatchMapping("/{itemId}/user/{userId}/unpin")
+    public ResponseEntity<PortfolioResponse> unpinItem(
+            @PathVariable Long itemId,
+            @PathVariable Long userId) {
+
+        PortfolioItem unpinnedItem = portfolioService.unpinPortfolioItem(itemId, userId);
+        return ResponseEntity.ok(toResponse(unpinnedItem));
+    }
+
     @DeleteMapping("/{itemId}/user/{userId}")
     public ResponseEntity<Void> deleteItem(
             @PathVariable Long itemId,
             @PathVariable Long userId) {
+
         portfolioService.deletePortfolioItem(itemId, userId);
         return ResponseEntity.noContent().build();
     }
 
-    private PortfolioResponse toResponse(PortfolioItem i) {
+    private PortfolioResponse toResponse(PortfolioItem item) {
         return PortfolioResponse.builder()
-                .id(i.getId())
-                .title(i.getTitle())
-                .description(i.getDescription())
-                .projectUrl(i.getProjectUrl())
-                .imageUrl(i.getImageUrl())
-                .technologies(i.getTechnologies())
-                .completionDate(i.getCompletionDate())
+                .id(item.getId())
+                .title(item.getTitle())
+                .description(item.getDescription())
+                .projectUrl(item.getProjectUrl())
+                .imageUrl(item.getImageUrl())
+                .technologies(item.getTechnologies())
+                .completionDate(item.getCompletionDate())
+                .pinned(Boolean.TRUE.equals(item.getPinned()))
+                .projectScore(calculateProjectScore(item))
                 .build();
+    }
+
+    private int calculateProjectScore(PortfolioItem item) {
+        int score = 0;
+
+        if (item.getTitle() != null && !item.getTitle().isBlank()) {
+            score += 20;
+        }
+        if (item.getDescription() != null && !item.getDescription().isBlank()) {
+            score += 20;
+        }
+        if (item.getTechnologies() != null && !item.getTechnologies().isBlank()) {
+            score += 20;
+        }
+        if (item.getProjectUrl() != null && !item.getProjectUrl().isBlank()) {
+            score += 20;
+        }
+        if (item.getCompletionDate() != null) {
+            score += 20;
+        }
+
+        return score;
     }
 }
