@@ -12,13 +12,11 @@ import tn.esprit.freelancerprofileservice.entities.Skill;
 import tn.esprit.freelancerprofileservice.services.ISkillAuthenticityService;
 import tn.esprit.freelancerprofileservice.services.ISkillGapService;
 import tn.esprit.freelancerprofileservice.services.ISkillService;
-import tn.esprit.freelancerprofileservice.repositories.EndorsementRepository;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
- * Controller REST — gestion des compétences
+ * Controller REST de gestion des compétences.
  */
 @RestController
 @RequestMapping("/api/skills")
@@ -28,61 +26,80 @@ public class SkillController {
     private final ISkillService skillService;
     private final ISkillAuthenticityService authenticityService;
     private final ISkillGapService skillGapService;
-    private final EndorsementRepository endorsementRepository;
 
-    // POST /api/skills/user/{userId} — ajouter un skill
     @PostMapping("/user/{userId}")
     public ResponseEntity<SkillResponse> addSkill(
             @PathVariable Long userId,
-            @Valid @RequestBody AddSkillRequest request) {
-
+            @Valid @RequestBody AddSkillRequest request
+    ) {
         Skill skill = Skill.builder()
                 .name(request.getName())
+                .category(request.getCategory())
                 .examScore(request.getExamScore())
                 .build();
 
-        Skill saved = skillService.addSkill(userId, skill);
-        return ResponseEntity.status(HttpStatus.CREATED).body(toResponse(saved));
+        Skill savedSkill = skillService.addSkill(userId, skill);
+        return ResponseEntity.status(HttpStatus.CREATED).body(toResponse(savedSkill));
     }
 
-    // GET /api/skills/user/{userId} — mes skills
     @GetMapping("/user/{userId}")
     public ResponseEntity<List<SkillResponse>> getMySkills(@PathVariable Long userId) {
-        List<SkillResponse> skills = skillService.getMySkills(userId)
-                .stream().map(this::toResponse).collect(Collectors.toList());
-        return ResponseEntity.ok(skills);
+        List<SkillResponse> responses = skillService.getMySkills(userId)
+                .stream()
+                .map(this::toResponse)
+                .toList();
+
+        return ResponseEntity.ok(responses);
     }
 
-    // DELETE /api/skills/{skillId}/user/{userId} — supprimer un skill
     @DeleteMapping("/{skillId}/user/{userId}")
     public ResponseEntity<Void> deleteSkill(
             @PathVariable Long skillId,
-            @PathVariable Long userId) {
+            @PathVariable Long userId
+    ) {
         skillService.deleteSkill(skillId, userId);
         return ResponseEntity.noContent().build();
     }
 
-    // GET /api/skills/{skillId}/authenticity — score d'authenticité
     @GetMapping("/{skillId}/authenticity")
     public ResponseEntity<Double> getAuthenticityScore(@PathVariable Long skillId) {
         return ResponseEntity.ok(authenticityService.calculateAuthenticityScore(skillId));
     }
 
-    // GET /api/skills/user/{userId}/gaps — skill gap analysis
     @GetMapping("/user/{userId}/gaps")
     public ResponseEntity<SkillGapResponse> getSkillGaps(@PathVariable Long userId) {
         return ResponseEntity.ok(skillGapService.detectSkillGaps(userId));
     }
 
-    // Mapper entité → DTO response
-    private SkillResponse toResponse(Skill s) {
+    private SkillResponse toResponse(Skill skill) {
         return SkillResponse.builder()
-                .id(s.getId())
-                .name(s.getName())
-                .level(s.getLevel())
-                .authenticityScore(s.getAuthenticityScore())
-                .examScore(s.getExamScore())
-                .endorsementCount(endorsementRepository.countBySkillId(s.getId()))
+                .id(skill.getId())
+                .name(skill.getName())
+                .category(skill.getCategory())
+                .level(skill.getLevel())
+                .authenticityScore(skill.getAuthenticityScore())
+                .examScore(skill.getExamScore())
+                .endorsementCount(skill.getEndorsementCount())
                 .build();
+    }
+
+
+    /**
+     * Mise à jour du score d'examen d'une compétence.
+     * Recalcul automatique du score d'authenticité après mise à jour.
+     */
+    @PatchMapping("/{skillId}/user/{userId}/exam-score")
+    public ResponseEntity<SkillResponse> updateExamScore(
+            @PathVariable Long skillId,
+            @PathVariable Long userId,
+            @RequestBody java.util.Map<String, Double> body) {
+
+        Double examScore = body.get("examScore");
+
+        if (examScore == null || examScore < 0 || examScore > 100) {
+            return ResponseEntity.badRequest().build();
+        }
+
+        return ResponseEntity.ok(skillService.updateExamScore(skillId, userId, examScore));
     }
 }
